--- a/src/FantasyFootball.UI/App.xaml
+++ b/src/FantasyFootball.UI/App.xaml
@@ -1,9 +1,18 @@
-﻿<?xml version = "1.0" encoding = "UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:FantasyFootball"
-             x:Class="FantasyFootball.App">
-    <Application.Resources>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<Application
+  x:Class="FantasyFootball.App"
+  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  xmlns:local="clr-namespace:FantasyFootball">
+
+
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Resources/Colors.xaml" />
         <ResourceDictionary Source="Resources/Styles.xaml" />
-    </Application.Resources>
+        <ResourceDictionary Source="Resources/FontImages.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
